# CheckSplitter

./: README.md  docker-compose.yml  pyproject.toml
backend/: .env
backend/app/: forms.py  main.py  settings.py  startup.py
backend/app/api/: __init__.py  views.py
backend/app/api/helpers/: auth.py  session.py  utils.py
backend/app/api/routes/: auth.py  session.py
backend/app/database/: models.py
backend/app/schemas/: auth.py  session.py
backend/app/scripts/: hash_password.py  populate_db.py
backend/app/tests/: conftest.py
backend/app/tests/functional/: test_auth.py  test_session.py
backend/app/validators/: auth.py
templates/: credit.html  edit_credit.html  header.html  index.html  session_edit.html
