[tool.poetry]
name = "Check Splitter"
version = "0.0.1"
description = ""
authors = ["Alexander Yolkin <alexander.yolkin@agilecode.io>"]

[tool.poetry.dependencies]
python = "^3.8.5"
Click="7.0"
Flask="1.1.2"
Flask-Login="0.5.0"
Flask-WTF="0.14.3"
itsdangerous="1.1.0"
Jinja2="2.11.3"
MarkupSafe="1.1.1"
pony = {git = "https://github.com/ponyorm/pony.git", rev = "0c02f63ef1419bea3ddcb6a94c956da1c7120423"}
Werkzeug="1.0.1"
WTForms="2.3.3"
Flask-Cors="3.0.10"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
